manifests/defaultbackend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: ingress-controller

spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: default-http-backend
